[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/car.png" type="Texture" id=1]
[ext_resource path="res://car.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.69459
height = 16.1342

[node name="Car" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Raycasts" type="Node2D" parent="."]
position = Vector2( 4, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="RayCast2D" parent="Raycasts"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="UpLeft" type="RayCast2D" parent="Raycasts"]
rotation = 3.92699
enabled = true
collision_mask = 2

[node name="UpLeft2" type="RayCast2D" parent="Raycasts"]
rotation = 4.45059
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 2

[node name="Up" type="RayCast2D" parent="Raycasts"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 140 )
collision_mask = 2

[node name="UpRight" type="RayCast2D" parent="Raycasts"]
rotation = 5.49779
enabled = true
collision_mask = 2

[node name="UpRight2" type="RayCast2D" parent="Raycasts"]
rotation = 4.97419
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 2

[node name="Right" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
